testing/Travis/testcases/TypeChecker/shouldPass/KleeneStar.adl
CONTEXT KleeneStarTypeCheck IN ENGLISH

PURPOSE CONTEXT KleeneStarTypeCheck
{+ Test that Kleene star succeeds on endorelations.
   This verifies the type checker correctly accepts u*[A*A] yielding [A*A]. +}

RELATION u[A*A]
RELATION result[A*A]

RULE testKleeneStar: result = u*

ENDCONTEXT
